# aws-iot-node

./: .devcontainer.json  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  config-build.json  container-build.py
.github/workflows/: build-all-conan.yml
.profiles/: arm-m4
bare_iot_node/: conanfile.py
bare_iot_node/src/: main.h
docker/: Dockerfile
example_iot_node/: conanfile.py
example_iot_node/src/: CMakeLists.txt  main.h
freertos_iot_node/: CMakeLists.txt  conanfile.py
freertos_iot_node/src/: CMakeLists.txt  main.c
freertos_iot_node/src/platform/: CMakeLists.txt  free-rtos.c
freertos_kernel/: CMakeLists.txt  FreeRTOSConfig.h  conanfile.py
iot_node/: conanfile.py
iot_node/src/: main.c  main.h
src/: CMakeLists.txt  main.c
unity/: conanfile.py
